infra/zabbix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web-ingress
  namespace: conexao-solidaria
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: zabbix.conexao-solidaria.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-web
                port:
                  number: 8080
